Fixed stats on mobile

--- a/_sass/base/_grid-settings.scss
+++ b/_sass/base/_grid-settings.scss
@@ -7,8 +7,11 @@
 $max-width: 800px;
 
 // Neat Breakpoints
+$mobile-screen: 480px;
 $medium-screen: 600px;
 $large-screen: 900px;
+
+$mobile-screen-up: new-breakpoint(min-width $mobile-screen 4);
 
 $medium-screen-up: new-breakpoint(min-width $medium-screen 4);
 $large-screen-up: new-breakpoint(min-width $large-screen 8);
